# robot_control_system

./: CMakeLists.txt  README.md  package.xml
config/: arduino_actuator_control.yaml
include/robot_control_system/: arduino_actuator_interface.hpp  serial_port.hpp
robot_control_system/: CMakeLists.txt  package.xml  robot_control_system.xml
robot_control_system/config/: arduino_actuator_control.yaml
robot_control_system/include/robot_control_system/: arduino_actuator_interface.hpp  serial_port.hpp  visibility_control.h
robot_control_system/launch/: start_actuator_demo.launch.py
robot_control_system/rviz/: control.rviz
robot_control_system/src/: arduino_actuator_interface.cpp  serial_port.cpp
robot_control_system/urdf/: arduino_actuator_control.xacro
robot_control_system_tester/: CMakeLists.txt  package.xml
robot_control_system_tester/include/robot_control_system_tester/: robot_control_commander.hpp
robot_control_system_tester/src/: robot_control_commander.cpp
robot_firmware_arduino/haruto_onboard/: robot_onboard.ino
robot_firmware_arduino/robot_onboard/: robot_onboard.ino
src/: arduino_actuator_interface.cpp  serial_port.cpp
urdf/: arduino_actuator_control.xacro
